@@ -1,3 +1,4 @@
+    - added htmlall attribute to escape (Monte)
     - added template_exists() API function. (Andrei)
     - fixed a problem with using dynamic values for 'file'
       attribute of {include_php} tag. (Andrei)
